adjustment on mobile responsive

--- a/index.html
+++ b/index.html
@@ -32,11 +32,14 @@
         font-size: 35px;
         text-align: center;
       }
-      #newAcc-btn{display: flex;
-        justify-self: center;
+
+      #footer-text {
+        word-wrap: break-word;
       }
-      #footer-text{
-         word-wrap: break-word;
+
+      #fb-header-container {
+        text-align: center;
+        margin: 0;
       }
     }
 
@@ -61,9 +64,9 @@
       color: white;
       border-radius: 5px;
       border-style: none;
-      display: flex;
-      justify-self: center;
-      padding: 10px;
+      display: block;
+      padding: 10px 20px;
+      margin: 0 auto;
     }
 
     #container {
@@ -79,19 +82,16 @@
     input {
       margin-bottom: 10px;
       border-radius: 5px;
-      border-left-color: rgb(204, 208, 213);
-      border-right-color: rgb(204, 208, 213);
-      border-bottom-color: rgb(204, 208, 213);
-      border-top-color: rgb(204, 208, 213);
       border: 1px solid rgb(204, 208, 213);
       padding: 10px;
       max-width: 300px;
       width: 100%;
+      font-size: 16px;
     }
 
     ::placeholder {
       padding: 10px;
-      font-size: 14px;
+      font-size: 16px;
     }
 
     #form-container {
@@ -146,7 +146,7 @@
       font-size: 12px;
       padding: 10px 20px;
       word-spacing: 15px;
-      line-height: 1.5; 
+      line-height: 1.5;
     }
   </style>
 </head>
