--- a/newAcc.html
+++ b/newAcc.html
@@ -116,6 +116,9 @@
       font-size: 12px;
       color: grey;
       padding: 10px;
+      word-wrap: break-word;
+      word-spacing: 15px;
+      line-height: 1.5;
     }
 
     #sign-up-btn {
