--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
         margin-top: 20px;
         width: 100%;
         padding: 20px;
+        display: flex;
+        justify-content: center;
+      }
+
+      #form-container form{
+        width: 100%;
+        max-width: 100%;
       }
 
       input,
