--- a/newAcc.html
+++ b/newAcc.html
@@ -39,6 +39,11 @@
       .gender-group {
         flex-direction: column;
       }
+
+      .gender-option{
+        font-size: 14px;
+        padding: 12px 10px;
+      }
     }
 
     body {
@@ -118,30 +123,35 @@
       display: flex;
       gap: 10px;
       margin-bottom: 15px;
+      flex-wrap: wrap;
     }
 
     .gender-option {
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: space-between;
       gap: 5px;
       border: 1px solid rgb(221, 212, 212);
-      padding: 8px 10px;
+      padding: 10px 15px;
       width: 100%;
       border-radius: 7px;
-      font-size: 16px;
+      font-size: 15px;
       cursor: pointer;
     }
 
+.gender-option input[type="radio"] {
+  margin-left: auto;  
+  flex-shrink: 0; 
+}
 
     .footer-text {
       font-size: 12px;
       color: grey;
       padding: 10px;
-    gap: 10px;
+      gap: 10px;
       line-height: 1.5;
       display: flex;
-    flex-wrap: wrap;
+      flex-wrap: wrap;
     }
 
     #sign-up-btn {
@@ -212,7 +222,9 @@
             <input placeholder="First name"> <input placeholder="Surname">
           </div>
 
-          <p style="font-size: 12px;color: grey;">Date of birth <span  style="display: inline-block; width: 14px; height: 14px; text-align: center; font-size: 10px; line-height: 14px;">&#x2753;</span></p>
+          <p style="font-size: 12px;color: grey;">Date of birth <span
+              style="display: inline-block; width: 14px; height: 14px; text-align: center; font-size: 10px; line-height: 14px;">&#x2753;</span>
+          </p>
           <div id="DOB">
             <select>
               <option value="">day</option>
@@ -272,18 +284,20 @@
             </select>
           </div>
 
-          <p style="font-size: 12px;color: grey;">Gender <span  style="display: inline-block; width: 14px; height: 14px; text-align: center; font-size: 10px; line-height: 14px;" >&#x2753;</span> </p>
+          <p style="font-size: 12px;color: grey;">Gender <span
+              style="display: inline-block; width: 14px; height: 14px; text-align: center; font-size: 10px; line-height: 14px;">&#x2753;</span>
+          </p>
           <div class="gender-group">
             <label class="gender-option">
-              Female<input type="radio" name="gender" placeholder="Female">
+              Female<input type="radio" name="gender" value="Female">
             </label>
 
             <label class="gender-option">
-              Male<input type="radio" name="gender" placeholder="Male">
+              Male<input type="radio" name="gender" value="Male">
             </label>
 
             <label class="gender-option">
-              Custom<input type="radio" name="gender" placeholder="Custom">
+              Custom<input type="radio" name="gender" value="Custom">
             </label>
           </div>
 
