adjust form content to center on mobile

--- a/index.html
+++ b/index.html
@@ -14,13 +14,19 @@
         display: flex;
         flex-direction: column;
         height: auto;
-        padding: 20px;
+        padding: 20px 15px;
         align-items: center;
       }
-       .line-accross {
-    margin-left: 20px;
-    margin-right: 20px;
-  }
+
+      .line-accross {
+        margin-left: 20px;
+        margin-right: 20px;
+      }
+
+      #fb-header-sub-text {
+        text-align: center;
+      }
+
 
       #form-container {
         margin: 0;
@@ -29,9 +35,11 @@
         padding: 20px;
         display: flex;
         justify-content: center;
+        margin-right: auto;
+        margin-left: auto;
       }
 
-      #form-container form{
+      #form-container form {
         width: 100%;
         max-width: 100%;
       }
@@ -54,18 +62,24 @@
         text-align: center;
         margin: 0;
       }
-      #left-column{
+
+      #left-column {
+        display: flex;
+        flex-direction: column;
         text-align: center;
         max-width: 100%;
         margin-bottom: 35px;
+        margin-right: 0;
       }
+
       #left-column img {
         width: 170px;
       }
 
-      #right-column{
+      #right-column {
         width: 100%;
         margin-bottom: 20px;
+        align-items: center;
       }
     }
 
@@ -187,24 +201,26 @@
       margin-bottom: 80px;
     }
 
-    #left-column{
+    #left-column {
       max-width: 500px;
-margin-right: 60px;
+      margin-right: 60px;
     }
-    #fb-header-sub-text{
-    max-width:500px;
-    margin: 0 auto;
-    font-size: 22px;
-    }
-    #login-btn:hover {
-  background-color: rgb(11, 104, 224);
-  cursor: pointer;
-}
 
-#newAcc-btn:hover {
-  background-color: rgb(30, 165, 2);
-  cursor: pointer;
-}
+    #fb-header-sub-text {
+      max-width: 500px;
+      margin: 0 auto;
+      font-size: 22px;
+    }
+
+    #login-btn:hover {
+      background-color: rgb(11, 104, 224);
+      cursor: pointer;
+    }
+
+    #newAcc-btn:hover {
+      background-color: rgb(30, 165, 2);
+      cursor: pointer;
+    }
   </style>
 </head>
 
@@ -253,29 +269,29 @@ margin-right: 60px;
   <div class="line-accross"></div>
 
   <div class="footer-text">
-     <span>SignUp</span>
-      <span>LogIn</span>
-      <span>Messenger</span>
-      <span>Facebook</span>
-      <span>Video</span>
-      <span>metaPay</span>
-      <span>metaStore</span>
-      <span>metaQuest</span>
-      <span>Ray-Ban Meta</span>
-      <span>MetaAI</span>
-      <span>Instagram</span>
-      <span>Threads</span>
-      <span>Privacy Policy</span>
-      <span>Privacy Center</span>
-      <span>About</span>
-      <span>Create ad</span>
-      <span>Create Page</span>
-      <span>Developers</span>
-      <span>Careers</span>
-      <span>Cookies</span>
-      <span>Terms</span>
-      <span>Help</span>
-      <span>Settings</span>
+    <span>SignUp</span>
+    <span>LogIn</span>
+    <span>Messenger</span>
+    <span>Facebook</span>
+    <span>Video</span>
+    <span>metaPay</span>
+    <span>metaStore</span>
+    <span>metaQuest</span>
+    <span>Ray-Ban Meta</span>
+    <span>MetaAI</span>
+    <span>Instagram</span>
+    <span>Threads</span>
+    <span>Privacy Policy</span>
+    <span>Privacy Center</span>
+    <span>About</span>
+    <span>Create ad</span>
+    <span>Create Page</span>
+    <span>Developers</span>
+    <span>Careers</span>
+    <span>Cookies</span>
+    <span>Terms</span>
+    <span>Help</span>
+    <span>Settings</span>
   </div>
   <div class="footer-text">Meta © 2025</div>
 
